[gd_scene load_steps=2 format=3 uid="uid://c12jraubuv28g"]

[ext_resource type="Script" uid="uid://c0lk208yh2x2s" path="res://data/upgrades/system_upgrade_ui.gd" id="1_51fo2"]

[node name="SystemUpgradeUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_51fo2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="InfoLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="UpgradesList" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
